Adding tests for tracker subcomponents (CORE-1286)
Builds out test coverage for the listeners, sinks and  projectors that form the
sub-components of the DistributionLifecycleTracker